# BinaryCodec

./: CMakeLists.txt  Codec.cc  Codec.h  README.md  ReadStream.cc  ReadStream.h  WriteStream.cc  WriteStream.h  build.sh  client.cc  server.cc
